force-app/main/default/objects/Account/fields/Training_Organization_Status__c.field-meta.xml
<CustomField>
    <fullName>Training_Organization_Status__c</fullName>
    <label>Training Organization Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Providing Trainings</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>