force-app/main/default/objects/Account/recordTypes/Training_Organization_Account.recordType-meta.xml
<RecordType>
    <fullName>Training_Organization_Account</fullName>
    <active>true</active>
    <description>Account page for creating Training organizations</description>
    <label>Training Organization Account</label>
</RecordType>